@@ -1,4 +1,6 @@
 2010-xx-xx - release 0.10.0
+        - Bugfix: Extension hiding works again with names >12 characters
+        - Testing aid: card detect-to-LED function
         - GEOS support (d64/d71 images only)
 
 2010-06-21 - release 0.9.2
